# rs-polygraph

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FAILURES.md  README.md  ROADMAP.md
.config/: nextest.toml
.devcontainer/: devcontainer.json
.github/skills/release-polygraph/: SKILL.md
.github/workflows/: ci.yml  release.yml
benches/: transpilation.rs
crates/polygraph/: Cargo.toml
crates/polygraph/src/: lib.rs
crates/polygraph/src/lqa/: expr.rs  mod.rs  normalize.rs  sparql.rs  write.rs
crates/polygraph/src/parser/: gql.rs
crates/polygraph/src/rdf_mapping/: mod.rs  rdf_star.rs
crates/polygraph/src/result_mapping/: mod.rs
crates/polygraph/src/translator/: gql.rs  mod.rs
crates/polygraph/src/translator/cypher/: functions.rs  temporal.rs  util.rs  write_update.rs
examples/: check_agg.rs  check_agg.rs.bak.ignore  check_collect.rs  check_isnull.rs  check_null_cont.rs  check_orderby.rs  check_specific.rs  check_unwind.rs  check_with2.rs  check_with3.rs  check_withwhere.rs  dbg_regressions.rs  debug_collect.rs  debug_graph6.rs  debug_parse.rs  debug_prec.rs  debug_shadow.rs  debug_shadow2.rs  debug_sparql.rs  debug_w4.rs  debug_with7.rs  exec_regressions.rs  parse_debug.rs  qdebug.rs  sparql_debug.rs  test_agg.rs  test_agg2.rs  test_agg5.rs  test_bound.rs  test_distinct_collect.rs  test_if_exec.rs  test_null_collect.rs
grammars/: cypher.pest  cypher.pest.bak
plans/: cleanup-assessment.md  final-mile.md  fundamental-limitations.md  gherkin_bugs.md  iana-timezone.md  implementation-plan.md  l2-runtime-support.md  legacy-removal.md  parser-extraction.md  pg-extension-protocol.md  release.md  remaining-failures.md  remaining-work.md  result-mapping.md  scenario-debt.md  spec-first-pivot.md  target-engines.md  tck-100-plan.md  tck-18-final.md  tck-27-remaining.md  tck-final-10.md  tck-final-four.md  tck-full-plan.md  tck-parallelism.md  temporal-cleanup.md  test-harness-consolidation.md
polygraph-difftest/: Cargo.toml  README.md
polygraph-difftest/queries/: abs_negative_integer.toml  aggregate_order_by_computed_alias.toml  and_or_predicates.toml  arithmetic_int_operations.toml  avg_aggregate.toml  avg_float_result.toml  avg_grouped_by_dept.toml  avg_score_grouped.toml  boolean_and_or_not.toml  boolean_property_filter.toml  case_arithmetic_result.toml  case_in_where.toml  case_multiple_when.toml  case_no_else_returns_null.toml  case_simple_form.toml  case_string_classification.toml  case_when_else.toml  chained_arithmetic.toml  coalesce_chain.toml  coalesce_fallback.toml  coalesce_numeric_fallback.toml  coalesce_with_literal_default.toml  common_neighbors.toml  conditional_case_when.toml  contains_predicate.toml  count_aggregate.toml  count_distinct_aggregate.toml  count_distinct_property.toml  count_distinct_relationship.toml  count_grouped_by_dept_size.toml  count_incoming_relationships.toml  count_nodes_per_relationship.toml  count_per_label_match.toml  count_per_species.toml  count_star_basic.toml  count_star_with_filter.toml  count_with_having_filter.toml  cross_product_match.toml  distinct_relationship_endpoints.toml  distinct_string_column.toml  (+200 more)
polygraph-difftest/src/: fixture.rs  lib.rs  neo4j.rs  oracle.rs  rdf_projection.rs  runner.rs  suite.rs  value.rs
polygraph-difftest/tests/: smoke.rs
src/: error.rs  lib.rs
src/ast/: cypher.rs  gql.rs  mod.rs
src/lqa/: bag.rs  expr.rs  lower.rs  mod.rs  normalize.rs  op.rs  sparql.rs  write.rs
src/parser/: cypher.rs  gql.rs  mod.rs
src/rdf_mapping/: mod.rs  rdf_star.rs  reification.rs
src/result_mapping/: mapper.rs  mod.rs  schema.rs  types.rs  xsd.rs
src/sparql_engine/: mod.rs
src/translator/: cypher.rs  gql.rs  visitor.rs
src/translator/cypher/: clauses.rs  functions.rs  mod.rs  patterns.rs  return_proj.rs  rewrite.rs  semantics.rs  temporal.rs  util.rs
tests/integration/: cypher_to_sparql.rs  gql_to_sparql.rs  movie_graph.rs  result_mapping.rs
tests/tck/: main.rs
tests/tck/baseline/: scenarios.jsonl
tools/: README.md  tck_diff.sh
