[package]
name = "polygraph"
version = "0.1.0"
edition = "2021"
authors = ["rs-polygraph contributors"]
license = "MIT OR Apache-2.0"
description = "A Rust library that transpiles openCypher and ISO GQL queries into SPARQL 1.1 algebra"
repository = "https://github.com/oxigraph/rs-polygraph"

[lib]
name = "polygraph"
path = "src/lib.rs"

[[test]]
name = "tck"
path = "tests/tck/main.rs"
harness = false

[[test]]
name = "integration"
path = "tests/integration/cypher_to_sparql.rs"

[[test]]
name = "gql_integration"
path = "tests/integration/gql_to_sparql.rs"

[[test]]
name = "result_mapping"
path = "tests/integration/result_mapping.rs"

[dependencies]
pest = "2.7"
pest_derive = "2.7"
spargebra = { version = "0.3", features = ["rdf-star"] }
thiserror = "2.0"
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[dev-dependencies]
oxigraph = { version = "0.5", default-features = false }
cucumber = "0.20"
criterion = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[features]
default = ["serde"]
serde = ["dep:serde", "dep:serde_json"]

[[bench]]
name = "transpilation"
harness = false
path = "benches/transpilation.rs"

[package.metadata]
# oxigraph dev-dep re-enabled in Phase 6 (needs libclang / bindgen)

[profile.release]
opt-level = 3
lto = true
